# fakellm-recorder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/fakellm_recorder/: __init__.py  cli.py  conversation.py  emitter.py  linter.py  proxy.py  scrub.py  store.py  streaming.py
tests/: test_e2e.py  test_units.py
