[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fakellm-recorder"
version = "0.1.0"
description = "Record real OpenAI/Anthropic API traffic and emit fakellm.yaml rules automatically."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Douglas Gregor", email = "1dg618@gmail.com" }]
keywords = ["fakellm", "testing", "mock", "openai", "anthropic", "llm", "vcr"]
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "fastapi>=0.110"]

[project.scripts]
fakellm-recorder = "fakellm_recorder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fakellm_recorder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/1dg618/fakellm-recorder"
Repository = "https://github.com/1dg618/fakellm-recorder"
Issues = "https://github.com/1dg618/fakellm-recorder/issues"
